--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "karma" : "*",
         "karma-junit-reporter" : "*",    
         "karma-jasmine" : "*",
-        "karma-ng-scenario" : "*"
+        "karma-ng-scenario" : "*",
+		"passport": "*",
+		"passport-local": "*"
     }
 }
